# entrymaker

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
src/entrymaker/: app.py  exportmd.py  views.py
src/entrymaker/ui/: widget.py  widget.ui
ui/: widget.ui
